apps/prod/rbx-atlas/middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: rbx-atlas
spec:
  redirectScheme:
    scheme: https
    permanent: true
