apps/prod/rbx-atlas/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-atlas
  namespace: rbx-atlas
  labels:
    app.kubernetes.io/name: rbx-atlas
    app.kubernetes.io/part-of: rbx-atlas
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: rbx-atlas
  ports:
    - port: 80
      targetPort: 3000
      name: http
